Fix Error con la base de supabase y la configuracion comando con nodemon Atributo rol a usuario, servicio de validacion de rol Pruebas backend

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://postgres:R3m1%2A123Lu1s@db.ydbxpkddsktgmetardev.supabase.co:5432/postgres?sslmode=require
+DATABASE_URL=postgres://postgres:R3m1%2A123Lu1s@db.ydbxpkddsktgmetardev.supabase.co:5432/postgres
 PORT=3000
 NODE_ENV=development
 JWT_SECRET=L1NGU1R3M1
