Feat: Instalacion de la libreria nodemailer y creacion del servicio de correos y el metodo para enviarlo

--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
+// Informacion base de datos
 DATABASE_URL=postgresql://postgres.ydbxpkddsktgmetardev:R3m1%2A123Lu1s@aws-1-us-east-2.pooler.supabase.com:6543/postgres
 PORT=3000
 NODE_ENV=development
 JWT_SECRET=L1NGU1R3M1
+
+// Informacion servicio de email
+EMAIL_USER=miguel.machado8506@gmail.com
+EMAIL_PASS=izdvagmwjkqioxut
